Prevent header li wrap

--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,7 @@ footer {
     text-align: center;
     padding: 1em 3em;
 }
-@media (min-width: 1150px) {
+@media (min-width: 1330px) {
     body > nav + section > h1 + p {
         margin-top: 20px;
     }
@@ -136,7 +136,7 @@ footer {
     .row > .col-7 { width: 58.3333333333%; }
     .row > .col-8 { width: 66.6666666667%; }
 }
-@media (max-width: 925px) {
+@media (max-width: 1100px) {
     nav {
         position: relative;
         height: auto;
@@ -157,7 +157,7 @@ footer {
         margin-top: 0px;
     }
 }
-@media (max-width: 1150px) {
+@media (max-width: 1330px) {
     nav ul {
         font-size: 20px;
     }
